[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.17.3", features = ["native-tls"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
url = "2.2.2"
env_logger = "0.10.0"
log = "0.4.14"
console_log = { version = "0.2", optional = true }
simple_logger = "4.0.0"
warp = "0.3.2"
#tokio-core = "0.1.18"
tokio = { version = "1", features = ["full"] }



[[bin]]
name = "server"
#path = "src/example.rs"
path = "src/server.rs"



#hex = "0.4.3"
#secp256k1 = { version = "0.24.0", features = ["rand", "bitcoin_hashes", "global-context", "serde"] }
#base64 = "0.13.0"